...
  Widget build(BuildContext context) {
    final colors = Theme.of(context).colorScheme;
    final customColors = context.customColors;

    final choices = [
      MapEntry(WorkoutDifficulty.easy, "Quá nhẹ"),
      MapEntry(WorkoutDifficulty.right, "Vừa sức"),
      MapEntry(WorkoutDifficulty.hard, "Quá nặng"),
    ];

    return PopScope(
      canPop: !feedback.saving,
      child: AlertDialog(
        title: Text(
          "Buổi tập vừa rồi thế nào?",
          style: TextStyle(
            color: customColors.primaryText,
            fontWeight: FontWeight.bold,
          ),
        ),
        content: Column(
...
